[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Kelly_Slab/KellySlab-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/main_ui/Main_UI.gd" type="Script" id=2]
[ext_resource path="res://assets/shop/gold_coin.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 1820.0
margin_bottom = 980.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
margin_right = 454.0
margin_bottom = 880.0
size_flags_horizontal = 3
custom_constants/margin_top = 375
custom_constants/margin_bottom = 375

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer3"]
margin_top = 375.0
margin_right = 454.0
margin_bottom = 505.0

[node name="Highest_Score" type="Label" parent="HBoxContainer/MarginContainer3/HBoxContainer"]
margin_right = 454.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "Highest Score: 
"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 458.0
margin_right = 1261.0
margin_bottom = 880.0
custom_constants/separation = 200

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 803.0
margin_bottom = 122.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Defend the Realm!"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 322.0
margin_right = 803.0
margin_bottom = 607.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="New_Game" type="Label" parent="HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_right = 803.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "New Game"
align = 1

[node name="Startbutton" type="Button" parent="HBoxContainer/VBoxContainer2/VBoxContainer/New_Game"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="Label" parent="HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 73.0
margin_right = 803.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Shop"
align = 1

[node name="shopbutton" type="Button" parent="HBoxContainer/VBoxContainer2/VBoxContainer/Shop"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Label" parent="HBoxContainer/VBoxContainer2/VBoxContainer"]
margin_top = 146.0
margin_right = 803.0
margin_bottom = 219.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Reset"
align = 1

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer2/VBoxContainer/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit_to_desktop" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 807.0
margin_right = 803.0
margin_bottom = 880.0
custom_fonts/font = SubResource( 2 )
text = "Quit to Desktop"
align = 1

[node name="Quitbutton" type="Button" parent="HBoxContainer/VBoxContainer2/Quit_to_desktop"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 1265.0
margin_right = 1720.0
margin_bottom = 880.0
size_flags_horizontal = 3
custom_constants/margin_top = 375
custom_constants/margin_bottom = 375

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_top = 375.0
margin_right = 455.0
margin_bottom = 505.0

[node name="gold_amount" type="Label" parent="HBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 225.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "0
"
align = 1
valign = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 229.0
margin_right = 455.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/MarginContainer/HBoxContainer/AspectRatioContainer"]
margin_left = 48.0
margin_right = 178.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )

[connection signal="pressed" from="HBoxContainer/VBoxContainer2/VBoxContainer/New_Game/Startbutton" to="." method="_on_Startbutton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/VBoxContainer/Shop/shopbutton" to="." method="_on_shopbutton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/VBoxContainer/Options/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/Quit_to_desktop/Quitbutton" to="." method="_on_Quitbutton_pressed"]
